--- a/proposal.qmd
+++ b/proposal.qmd
@@ -425,7 +425,13 @@ write.csv(happiness_all_years_df, file = "data/happiness_all_years_df.csv")
 
     The different factors involved are as follows : economy ("GDP per capita"), family ("social support"), health("healthy life expectancy at birth"), freedom ("freedom to make life choices"), trust("perceptions of corruption") and genorosity ("genorosity").
 
-    To explore how various factors contribute to the overall happiness score across different countries over the years, we have designed an interactive analysis where users can select a specific year and country from drop-down menus, allowing for a dynamic and personalized exploration of the data. We are planning to create a bar chart where the x-axis represents the factors (independent variables), and the y-axis represents their contribution to the overall happiness score. For better visulaization we are planning to choose a Grouped Bar chart, where separate bars represents each factor, and their heights represent their contributions to the overall happiness score. This chart provides a side-by-side comparison of each factor's contribution. We are planning to expand the analysis by incorporating a stacked bar plot to gain more comprehensive visualization.
+    Objective : The aim is to enable users to interactively explore the impact of different factors on happiness scores by selecting specific years and countries.
+
+    Interactive Widgets: Adding user interface with two key drop-down menus, one for selecting the year and the other for choosing a specific country. This allows users to customize their data exploration.
+
+    Visualization: Chart Selection - Planning to create a Grouped Bar chart for visualizing the contributions of different factors to the overall happiness score. In this chart, each factor is represented by a separate bar, and the height of each bar corresponds to its contribution to the overall happiness score. Also panning to expand the analysis by introducing a stacked bar plot. This plot adds a layer of depth to the analysis by visually representing how multiple factors contribute to the overall happiness score within the same bar, allowing users to see the combined effect of these factors.
+
+    Insights and Exploration: Observing and Highlighting factors that consistently impact happiness scores across different countries and years.
 
 -   **Approach for Question 2**
 
